# knowyournetwork

./: .gitignore  README.md  build_and_run.sh  increase_vm_map_count.sh  kynadmin.sh  smoketest.sh
Admin/: Dockerfile  README
Admin/ci_scripts/: build
Admin/filesystem/elasticsearch_data/: import_all.sh  import_data.sh  import_prod.sh  import_template.sh
Admin/filesystem/elasticsearch_data/index/: kibana.json
Admin/filesystem/elasticsearch_data/template/: kyn-cluster.json  kyn-default.json  kyn-events.json  kyn-hostinfo.json  kyn-malware.json  kyn-netflow.json  kyn-newsticker.json  kyn-policy.json  (+6 more)
Admin/filesystem/mysql_data/: set_access.sh
Backend/: Dockerfile
Backend/ci_scripts/: build
Backend/filesystem/etc/: crontab  supervisord.conf
Capture/: Dockerfile
Capture/ci_scripts/: Dockerfile.build  build  build_nfelastic.sh  build_yaf.sh  clean
Capture/filesystem/etc/: crontab  super_mediator.conf  supervisord.conf  yafApplabelRules.conf  yafDPIRules.conf
Capture/nfelastic/: .gitignore  CMakeLists.txt  Makefile.in  config.h.in  configure  configure.ac
Capture/nfelastic/man/: Makefile.in
Elasticsearch/: Dockerfile
Elasticsearch/ci_scripts/: build
Frontend/: .gitignore  Dockerfile  karma-test-shim.js  karma.conf.js  package.json
Frontend/ci_scripts/: Dockerfile-tests  build  run-tests
Frontend/src/: config.js  index.html  server.js  systemjs.config.js  tsconfig.json
Frontend/src/app/: app.component.spec.ts  app.component.ts  app.config.ts  app.module.ts  app.routing.ts
Kibana/: Dockerfile
Kibana/ci_scripts/: build
Logstash/: Dockerfile
Logstash/ci_scripts/: build
Middleware/: .gitignore  Dockerfile
Middleware/KynKite/: .gitignore  pom.xml
Middleware/KynKite/Documentation/: General overview.docx
Middleware/KynKite/KynKiteWebApp/: pom.xml
Middleware/ci_scripts/: Dockerfile.build  Dockerfile.docs  build  clean  makedocs  run-tests
Middleware/filesystem/etc/: supervisord.conf
Mysql/: Dockerfile
Mysql/ci_scripts/: build
Mysql/filesystem/etc/: crontab  supervisord.conf
Pyresttest/: Dockerfile
Pyresttest/ci_scripts/: build
Pyresttest/filesystem/tests/: all.yaml  aql-test.yaml  kite-test.yaml  lara-test.yaml  newsticker-test.yaml  ntv-test.yaml  reports-test.yaml  syslog-test.yaml
Reports/: Dockerfile
Reports/ci_scripts/: build
Reports/filesystem/Reports/: actmanrep.php  report.tex  run.sh
Spark/: Dockerfile
Spark/ci_scripts/: build
Spark/filesystem/etc/: crontab
ci_scripts/: build  cleanup  common  create_report  push  stage
export/: load.sh  save.sh
(+552 files in other folders)
